2009-12-01  Kai Tietz  <kai.tietz@onevision.com>

	* lib32/crypt32.def: Regenerated by gendef.

2009-10-25  Charles Wilson  <cwilso11@users.sourceforge.net>

	* crt/pseudo-reloc.c:  Merge cygwin-specific code.

2009-10-20  Ozkan Sezer  <sezeroz@gmail.com>

	* crt/pseudo-reloc.c:  Merged documentation updates and most of the
	whitespace changes from cygwin.  Additional whitespace changes.
	Shortened some of the error messages.  Removed assert.h #include
	which isn't necessary any more.

2009-10-08  Kai Tietz  <kai.tietz@onevision.com>

	* lib32/gpapi.def: New.
	* lib32/gpedit.def: New.
	* lib32/gpprefcl.def: New.
	* lib32/gpscript.def: New.
	* lib32/gptext.def: New.
	* Makefile.am: Add new lib32 def-files.
	* Makefile.in: Regenerated.

2009-10-07  Kai Tietz  <kai.tietz@onevision.com>

	* crt/pseudo-reloc.c (__report_error): New.

2009-10-03  Kai Tietz  <kai.tietz@onevision.com>

        * libsrc/wia-uuid.c: New.
        * Makefile.am: Add libsrc/wia-uuid.c to libuuid.a lib.
        * Makefile.in: Regenerated.

	* misc/basename.c, misc/dirname.c: New.
	* Makefile.am: Add basename.c and dirname.c to libmingwex.a lib.
	* Makefile.in: Regenerated.

2009-09-20  Ozkan Sezer  <sezeroz@gmail.com>

	* intrins/ilock*.c:  Added non-underscored functions as aliases to the
	real ones.

2009-09-18  Kai Tietz  <kai.tietz@onevision.com>

	* Implement time_t related functions by stubs in libmingwex.a and do
	export them in .def as DATA. So just the imp_<name> is present and we
	avoid collisions in names. Reasoned is this patch by dlltool's inability
	to alias symbols.

2009-09-17  Kai Tietz  <kai.tietz@onevision.com>

	* lib32/lib64: Add for time specific function the _<name>32 version to def
	files.
	* misc: Adjust time functions to use _<name>32 on demand.

2009-09-15  Kai Tietz  <kai.tietz@onevision.com>

	* lib32/lib64: Add symbols _localtime32, _gmtime32, and _mkgmtime32.
	* misc/...: Add version for 32-bit time_t case.

2009-09-10  Kai Tietz  <kai.tietz@onevision.com>
