@@ -1,5 +1,13 @@
 2009-12-01  Kai Tietz  <kai.tietz@onevision.com>
 
+	Merged from mingw.org's repository.
+	2009-11-25  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>
+
+        * mingwex/gdtoa/misc.c: Fix security vulnerability in gdtoa:
+	http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2009-0689
+
+2009-12-01  Kai Tietz  <kai.tietz@onevision.com>
+
 	* lib32/crypt32.def: Regenerated by gendef.
 
 2009-10-25  Charles Wilson  <cwilso11@users.sourceforge.net>
